# tauri-plugin-overlay

./: .gitignore  Cargo.toml  README.md  build.mjs  build.rs  package.json  pnpm-lock.yaml  tsconfig.json
dist-js/: index.cjs  index.cjs.map  index.d.ts  index.js  index.js.map
guest-js/: index.ts
permissions/: default.toml
src/: commands.rs  error.rs  lib.rs  state.rs
