[package]
name = "tauri-plugin-overlay"
version = "0.1.0"
edition = "2021"
authors = ["Jude <judebhekman@gmail.com>"]
license = "MIT"
description = "Tauri plugin wrapping overlay-engine. Render panel iframes into running games via WebView2 composition + DLL injection. Each panel is a regular HTML document; host <-> panel messaging surfaces as Tauri events and commands."
repository = "https://github.com/judehek/tauri-plugin-overlay"
homepage = "https://github.com/judehek/tauri-plugin-overlay"
readme = "README.md"
links = "tauri-plugin-overlay"
keywords = ["tauri", "plugin", "overlay", "webview2", "game"]
categories = ["gui", "os::windows-apis"]
rust-version = "1.77"

[dependencies]
tauri = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
tokio = { version = "1.36", features = ["sync", "rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
overlay-engine = { path = "../overlay-engine" }
axum = { version = "0.7", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
